<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app"
        tools:context=".view.activities.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_divisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/display_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_divisor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/main_top_app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/main_top_app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/main_top_bar"/>
            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/text_first_operand"
                style="@style/myCalc.portraitOperationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:contentDescription="@string/display_first_operand"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_top_app_bar_layout"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/text_operator"
                style="@style/myCalc.portraitOperatorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/text_second_operand"
                app:layout_constraintTop_toBottomOf="@+id/text_first_operand" />

            <TextView
                android:id="@+id/text_second_operand"
                style="@style/myCalc.portraitOperationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/display_second_operand"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_operator"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/text_equal"
                style="@style/myCalc.portraitEqualText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_operation_result"
                app:layout_constraintEnd_toStartOf="@+id/text_operation_result"
                app:layout_constraintTop_toTopOf="@+id/text_operation_result" />

            <TextView
                android:id="@+id/text_operation_result"
                style="@style/myCalc.portraitOperationResultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/display_operation_result"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_second_operand" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/keyboard_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_divisor">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/keyboard_fragment_container_view"
                android:name="com.daavsnts.calculator.view.fragments.PortraitKeyboardFragment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/keyboard_spacing_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout="@layout/fragment_portrait_keyboard" />

            <FrameLayout
                android:id="@+id/keyboard_spacing_layout"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/scientific_container_opened_overlay"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.38"
                android:background="?attr/colorPrimary"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/scientific_container_nav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scientific_container_nav"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_portrait_scientific_nav"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scientific_container_opened_overlay"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_open_close_scientific_container"
                    style="@style/myCalc.portraitScientificNavButton"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/scientific_keyboard_open"
                    app:icon="@drawable/ic_nav_scientific_keyboard_arrow_open"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/scientific_fragment_container_view"
                    android:name="com.daavsnts.calculator.view.fragments.PortraitScientificKeyboardFragment"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout="@layout/fragment_portrait_scientific_keyboard" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>